--- a/css/queries.css
+++ b/css/queries.css
@@ -50,12 +50,12 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background-image: url(/image/background_blur.png);
+    background-image: url("/image/background_blur.png");
     background-size: cover;
     top: 0;
     left: 0;
     left: -200%;
-    transition: all 1s linear;
+    transition: all 0.3s linear;
   }
   .menu .bar {
     padding: var(--padding);
@@ -116,6 +116,7 @@
     color: var(--orange);
     cursor: pointer;
   }
+
   /* menu end */
 
   /* start section1 main */
@@ -131,19 +132,28 @@
   }
   .section1 .content h1,
   h1 span {
-    font-size: 70px;
-    width: 600px;
+    font-size: 50px;
+    width: 440px;
   }
   .search {
+    width: 80vw;
+  }
+  .people {
+    width: 90vw;
+  }
+  .people p {
+    font-size: 16px;
+  }
+  .people h2 {
+    font-size: 18px;
+  }
+  .people-img {
+    width: 70px;
+    transition: all 20s;
+  }
+  .people-img img {
     width: 100%;
   }
-  /* start people  */
-  .people-img {
-    width: 100px;
-    height: 100px;
-  }
-  /* end people  */
-
   /* section 2 start */
 
   .arrow2-icon {
